[tool.poetry]
name = "repl-html-fermul"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_fermul"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow-hub = "^0.16.1"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
